<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raystone.ray.myappportfolio.MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="40dp"
        android:textSize="20sp"/>


    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="@dimen/button_width"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_text"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >


        <Button
            android:id="@+id/spotify"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:background="@color/buttonColor"/>

        <Button
            android:id="@+id/score"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:background="@color/buttonColor"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/library"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:background="@color/buttonColor"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/build"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/build"
            android:background="@color/buttonColor"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/xyz"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/xyz"
            android:background="@color/buttonColor"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/capstone"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:background="@color/last_button"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"/>


    </LinearLayout>





</RelativeLayout>
